[tool.poetry]
name = "magbert"
version = "0.1.0"
description = ""
authors = ["Masato Umakoshi <umakoshi@nlp.ist.i.kyoto-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.1"
scikit-learn = "^1.0.1"
transformers = "^4.14.1"
networkx = "^2.6.3"
nltk = "^3.6.5"
pypdb = "^2.0"
biopython = "^1.79"
xlrd = "1.1.0"
jupyterlab = "^3.2.5"
tqdm = "^4.62.3"
ipywidgets = "^7.6.5"
gensim = "^4.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
